jlink fix + suppress unnecessary warnings